--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -462,12 +462,15 @@ img {
 .popular__card:hover .popular__img{
   transform: translateY(-.25rem);
 }
-.popular__data-group{
-  display: inline-flex;
-}
+
 
 /* Swiper class */
-
+.swiper-pagination-bullet{
+  background: var(--text-color);
+}
+.swiper-pagination-bullet-active{
+  background-color: var(--first-color);
+}
 
 /*=============== FEATURES ===============*/
 
