--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -674,6 +674,21 @@ opacity: 1;
 
 
 /*=============== LOGOS ===============*/
+.logos__img{
+  width: 40px;
+  opacity: .4;
+  transition: .3s;
+}
+.logos__container{
+  grid-template-columns: repeat(3, max-content);
+  justify-content: center;
+  align-items: center;
+  gap: 4rem;
+  padding-bottom: 2rem;
+}
+.logos__img:hover{
+  opacity: 1;
+}
 
 
 /*=============== FOOTER ===============*/
